# 2nd_hackathon-phase1-2

./: .env.vercel  .gitignore  CONSTITUTION_md.  README.md  apply_fix.ps1  auth_fix.ts  clean_locks.bat  config_fix.js  constitution.md  do_fix.bat  fe_pkg_fix.json  final_fix.py  fix_monorepo.py  flatten.py  flatten_project.py  guide.md  package-lock.json  package.json  pyproject.toml  root_pkg_fix.json  vercel.json  verify_admin_backend.py  verify_agent.py  verify_p2_backend.py
.claude/: settings.local.json
.specify/memory/: constitution.md  phase1_requirments.txt
api/: index.py
specs/finalization/: spec.md
src/backend/: .env  .env.backend  .env.example  auth_utils.py  database.py  main.py  models.py  pyproject.toml  test_api.py
src/backend/agents/: orchestrator.py
src/backend/agents/subagents/: task_agent.py
src/backend/mcp_server/: agent.py  chat_endpoint.py  task_tools.py  web_search.py
src/frontend/: .env.example  .env.local  auth_v3.ts  next.config.js  package-lock.json  package.json
src/frontend/app/: layout.tsx  page.tsx
src/frontend/app/chat/: page.tsx
src/frontend/app/dashboard/: page.tsx
src/frontend/components/: GuestButton.tsx  TaskInterface.tsx
src/frontend/lib/: auth.ts
